[package]
name = "axplat-aarch64-sel4"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
irq = ["axplat/irq"]
smp = ["axplat/smp", "kspin/smp"]

[dependencies]
axconfig-macros = "0.2"
axplat = "0.2"
kspin = "0.1"
arm_pl011 = "0.1"
aarch64-cpu = "10.0"
int_ratio = "0.1"
log = "0.4"
axcpu = "0.2"
lazyinit = "0.2"
memory_addr = "0.4"
num_enum = { version = "0.7.3", default-features = false }
zerocopy = { version = "0.8.20", default-features = false }

sel4-kit = { git = "https://github.com/reL4team2/rel4-linux-kit.git", rev = "2c55dac" }
srv-gate = { git = "https://github.com/reL4team2/rel4-linux-kit.git", rev = "2c55dac" }
uart-thread = { git = "https://github.com/reL4team2/rel4-linux-kit.git", rev = "2c55dac" }
common = { git = "https://github.com/reL4team2/rel4-linux-kit.git", rev = "2c55dac" }
common-macros = { git = "https://github.com/reL4team2/rel4-linux-kit.git", rev = "2c55dac" }
sel4 = { git = "https://github.com/seL4/rust-sel4", rev = "5b9ebfd" }

[patch.crates-io]
axcpu = { git = "https://github.com/croakexciting/axcpu.git", rev = "d40cb74" }

[patch."https://github.com/seL4/rust-sel4"]
sel4 = { git = "https://github.com/yfblock/rust-sel4", rev = "1280281" }